kubernetes/apps/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  hostnames:
    - dash.cisien.dev
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
